fixed small typo and edited dashboard text

--- a/app/views/home/_admin_dashboard.html.erb
+++ b/app/views/home/_admin_dashboard.html.erb
@@ -4,7 +4,7 @@
 <br />
 
 <% if @pending_filter_keys.size > 0 %>
-  <p> These keys do not have filter assignments yet: </p>
+  <p> These keys do not have filter assignments or have not been shared with approvers yet: </p>
   
   <table>
     <tr>
