--- a/app/views/home/_requester_dashboard.html.erb
+++ b/app/views/home/_requester_dashboard.html.erb
@@ -3,7 +3,7 @@
 <h4> Hi, <%="#{current_user.andrew_id}"%>!  </h4>
 <br /> 
 
-<button>Apply for a new key<% link_to new_user_key_path %></button>
+<%= link_to  'Apply for a new key', new_user_key_path, class: "big-button" %>
 
 <p> My Existing Keys: </p>
 <% if @confirmed_keys.size > 0 %>
