Changed my to your, added name to user key, removed value from user key

--- a/app/views/user_keys/own_user_keys.html.erb
+++ b/app/views/user_keys/own_user_keys.html.erb
@@ -1,4 +1,4 @@
-<h1>My Keys</h1>
+<h1>Your Keys</h1>
 
 <div id="user_keys">
   <%= render partial: 'user_keys/own_user_keys_partials/own_user_keys_table', object: @user_keys %>
