--- a/app/views/user_keys/index_partials/_index_table.html.erb
+++ b/app/views/user_keys/index_partials/_index_table.html.erb
@@ -1,25 +1,55 @@
+<!-- Keys and list_all passed in from partial call. -->
+<!-- List_all = true if this is an index action, false for listing a user's keys. -->
+<!-- This partial is used by both own_user_keys and index pages. -->
+
+<% if keys.empty? and list_all %>
+  
+<p>No keys found.</p>
+
+<% elsif keys.empty? %>
+  
+<p>You do not have any existing or pending keys.</p>
+
+<% else %>
+
 <table>
   <thead>
     <tr>
-      <th>Key Id</th>
-      <th>User</th>
+      <th>Key Name</th>
+      <!-- Only show andrew_id if there are potentially multiple users listed.-->
+      <% if list_all %>
+        <th>User</th>
+      <% end %>
       <th>Submitted</th>
+      <!-- Only staff should see extra details. -->
+      <% if @current_user.role? :is_staff %>
       <th>Shared with approvers</th>
+      <% end %>
       <th>Confirmed</th>
+      <!-- Only admin can edit if submitted. Only owner can edit if not submitted. -->
       <th colspan="3"></th>
     </tr>
   </thead>
 
   <tbody>
-    <% for user_key in @user_keys %>
+    <% for user_key in keys %>
       <tr>
-	<td><%= link_to user_key.name, user_key %></td>
-	<td><%= link_to user_key.user.andrew_id, user_key.user %></td>
+	<td><%= link_to user_key.name, user_key %></td>      
+	<% if list_all %>
+	  <td><%= link_to user_key.user.andrew_id, user_key.user %></td>
+	<% end %>
 	<td><%= user_key.time_submitted.nil? ? "N/A" : user_key.time_submitted.to_formatted_s(:pretty) %></td>
-	<td><%= user_key.time_filtered.nil? ? "N/A" : user_key.time_filtered.to_formatted_s(:pretty) %></td>
+	<% if @current_user.role? :is_staff %>
+	  <td><%= user_key.time_filtered.nil? ? "N/A" : user_key.time_filtered.to_formatted_s(:pretty) %></td>
+	<% end %>
 	<td><%= user_key.time_confirmed.nil? ? "N/A" : user_key.time_confirmed.to_formatted_s(:pretty) %></td>
-	<td><%= link_to 'Edit', edit_user_key_path(user_key), class: "small-button" %></td>
+	<% if ((@current_user.role? :admin) or (@current_user.owns?(key) and key.at_stage? :awaiting_submission)) %>
+	  <td><%= link_to 'Edit', edit_user_key_path(user_key), class: "small-button" %></td>
+        <% end %>
       </tr>
     <% end %>
   </tbody>
 </table>
+
+
+<% end %>
