--- a/app/views/home/_requester_dashboard.html.erb
+++ b/app/views/home/_requester_dashboard.html.erb
@@ -16,7 +16,8 @@
 <% @confirmed_keys.each do |key| %>
   <tr>
     <td><%= link_to key.name, user_key_path(key) %></td>
-    <td><%= key.value %></td>
+    <%# FIXME add a "click here to view to have the CSS play nicely" %>
+    <td><%= key.gen_api_key %></td>
     <td><%= key.time_expired ? key.time_expired.to_formatted_s(:pretty) : "N/A" %></td>
   </tr>
 <% end %>
