--- a/app/views/user_keys/own_user_keys.html.erb
+++ b/app/views/user_keys/own_user_keys.html.erb
@@ -1,6 +1,6 @@
 <h1>Your Keys</h1>
 
-<div id="user_keys">
+<div id="own_user_keys">
   <%= render partial: 'user_keys/index_partials/index_table', locals: { keys: @user_keys, list_all: false } %>
 </div>
 
