--- a/app/views/users/index_partials/_index_table.html.erb
+++ b/app/views/users/index_partials/_index_table.html.erb
@@ -5,7 +5,7 @@
 
 <% if users.empty? %>
 
- <p>No <%= user_type %> found.</p>
+<p>No <%= user_type %> found.</p>
 
 <% else %>
   
@@ -15,7 +15,10 @@
 	<th>Andrew</th>
 	<th>Role</th>
 	<th>Active?</th>
-	<th colspan="3"></th>
+	<!-- Staff can see this list but only admin can edit users-->
+	<% if @current_user.role? :admin %>
+	  <th colspan="3"></th>
+	<% end %>
       </tr>
     </thead>
     <tbody>
@@ -26,7 +29,10 @@
 	<td>
         <%= render partial: 'shared/boolean_label', locals: { boolean_label: user.active } %>
         </td>
-	<td><%= link_to 'Edit', edit_user_path(user), class: "small-button" %></td>
+	<!-- Staff can see this list but only admin can edit users-->
+	<% if @current_user.role? :admin %>
+	  <td><%= link_to 'Edit', edit_user_path(user), class: "small-button" %></td>
+        <% end %>
       </tr>
     <% end %>
     </tbody>
