Changed views and controllers to reflect addition of name field

--- a/app/views/user_keys/show.html.erb
+++ b/app/views/user_keys/show.html.erb
@@ -1,4 +1,4 @@
-<h3>User Key</h3>
+<h3><%=@user_key.name%></h3>
 
 <%= render 'shared/error_messages', object: @user_key %>
 
@@ -18,7 +18,8 @@
 
 <p>
   <strong>Value:</strong>
-  <%= @user_key.value %>
+  <%#FIXME change to ben's created value %> 
+  <%#@user_key.value %>
 </p>
 
 <p>
