--- a/app/views/user_keys/form_partials/_application_text.html.erb
+++ b/app/views/user_keys/form_partials/_application_text.html.erb
@@ -1,3 +1,13 @@
+<p>
+	<div class="nine-column">
+
+Name: 
+      <%= f.text_field :name %> <small> Your application name. This is used for administrative purposes. For example, "cmuTV website key"
+ </small>
+</div>
+</p>
+<br/><br/><br/><br/><br/><br/> <!-- There's probably a better way to do that... -->
+
 <p>1. Who are the other individual(s)/organization(s) bringing forward the proposal?
 How can they be reached?
 Include key leadership roles on the project and who will hold them.
