--- a/app/views/user_keys/index_partials/_index_table.html.erb
+++ b/app/views/user_keys/index_partials/_index_table.html.erb
@@ -43,7 +43,7 @@
 	  <td><%= user_key.time_filtered.nil? ? "N/A" : user_key.time_filtered.to_formatted_s(:pretty) %></td>
 	<% end %>
 	<td><%= user_key.time_confirmed.nil? ? "N/A" : user_key.time_confirmed.to_formatted_s(:pretty) %></td>
-	<% if ((@current_user.role? :admin) or (@current_user.owns?(key) and key.at_stage? :awaiting_submission)) %>
+	<% if ((@current_user.role? :admin) or (@current_user.owns?(user_key) and user_key.at_stage? :awaiting_submission)) %>
 	  <td><%= link_to 'Edit', edit_user_key_path(user_key), class: "small-button" %></td>
         <% end %>
       </tr>
