--- a/app/views/user_keys/show_partials/_list_of_comments.html.erb
+++ b/app/views/user_keys/show_partials/_list_of_comments.html.erb
@@ -1,45 +1,9 @@
-<fieldset>
-  <h3>Administrator Notes to User</h3>
-  
-  <!--Show existing comments -->
-  <% if @public_comments.size == 0 %>
-  None
-  <% else %>
-    <% for comment in @public_comments %>
-    <fieldset>
-      <strong>Administrator</strong>
-      &nbsp;<%= comment.created_at.to_formatted_s(:pretty) %>
-      <% if @current_user.role? :admin %>
-	<%= link_to "X", delete_comment_path(id: @user_key.id, comment_id: comment.id),
-	  method: :patch, data: { confirm: 'Are you sure you want to delete this comment?'}, class: "small-button right" %>
-      <% end %>
-      <br />
-      <p><%= comment.message %></p>
-    </fieldset>
-    <% end %>
-  <% end %>
-</fieldset>
+<!--Show existing comments -->
+<%= render partial: 'user_keys/show_partials/sublist_of_comments', locals: { comments: @public_comments, comment_type: "Messages from Administrator" } %>
   
 <% if @current_user.role? :is_staff %> 
-  <fieldset>
-    <h3>Staff Discussion (Private)</h3>
-  <% if @private_comments.size == 0 %>
-      None
-  <% else %>
-    <!--Show existing comments -->
-    <% for comment in @private_comments %>
-      <strong><%= comment.comment_user.andrew_id %></strong>
-	&nbsp;<%= comment.created_at.to_formatted_s(:pretty) %>
-	<% if @current_user.role? :admin %>
-	  <%= link_to "X", delete_comment_path(id: @user_key.id, comment_id: comment.id),
-	    method: :patch, data: { confirm: 'Are you sure you want to delete this comment?'}, class: "small-button right" %>
-        <% end %>
-	<br />
-	<p><%= comment.message %></p>
-    <% end %>
-  <% end %>
-
-  </fieldset>
+    <%= render partial: 'user_keys/show_partials/sublist_of_comments', locals: { comments: @private_comments, comment_type: "Staff Discussion (Private)" } %>
+  
   
   <!-- Staff submitting their own keys can't comment until the key is submitted.-->
   <% if !(@user_key.at_stage? :awaiting_submission) %>
@@ -58,10 +22,10 @@
 	
 	<!-- Only admin is allowed to make a post visible to the requester-->
 	<% if @current_user.role? :admin %>
-	<div class="row">
-	    <%= p.label "Check here to post this comment as a note to the requester." %>
-	    <%= p.check_box :public %>
-	</div>
+	  <div class="row">
+	      <%= p.label "Check here to post this comment as a note to the requester." %>
+	      <%= p.check_box :public %>
+	  </div>
 	<% end %>
 	
       <% end %>
