Added notes to mailer views

--- a/app/views/layouts/mailer.html.erb
+++ b/app/views/layouts/mailer.html.erb
@@ -9,5 +9,9 @@
     <hr/>
 
     <p><em>If you are experiencing issues, please contact the system administrator.</em></p>
+    
+    <!-- This email is triggered in the UserKey conroller. -->
+    <!-- The development-only letter_opener gem to open the email in a new tab.-->
+  
   </body>
 </html>
