More user key controller changes and removed destroy button from user show

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -16,5 +16,4 @@
 <%= render partial: 'users/show_partials/list_of_user_keys' %>
 
 <%= link_to 'Edit', edit_user_path(@user), class: "big-button" %> |
-<%= link_to 'Back', users_path, class: "big-button secondary" %> |
-<%= link_to 'Destroy', @user, method: :delete, data: { confirm: 'Are you sure?' }, class: "small-button" %>
+<%= link_to 'Back', users_path, class: "big-button secondary" %>
