Small change to mailer layout

--- a/app/views/layouts/mailer.html.erb
+++ b/app/views/layouts/mailer.html.erb
@@ -7,8 +7,8 @@
     <%= yield %>
     
     <hr/>
-
-    <p><em>If you are experiencing issues, please contact the system administrator.</em></p>
+    
+    <p><em>Do not reply to this email. If you are experiencing issues, please contact the system administrator.</em></p>
     
     <!-- This email is triggered in the UserKey conroller. -->
     <!-- The development-only letter_opener gem to open the email in a new tab.-->
