--- a/app/views/user_keys/show_partials/_add_comment.html.erb
+++ b/app/views/user_keys/show_partials/_add_comment.html.erb
@@ -22,7 +22,7 @@
   <% end %>
   
   <div class="actions">
-    <%= f.submit class: "big-button success", value: "Add comment" %>
+    <%= f.submit class: "big-button", value: "Add comment" %>
   </div>
   
   </fieldset>
