--- a/app/views/user_keys/show_partials/_list_of_comments.html.erb
+++ b/app/views/user_keys/show_partials/_list_of_comments.html.erb
@@ -1,21 +1,25 @@
 <!--Show existing comments -->
-<%= render partial: 'user_keys/show_partials/sublist_of_comments', locals: { comments: @public_comments, comment_type: "Messages from Administrator" } %>
+<div class="public_comments">
+  <%= render partial: 'user_keys/show_partials/sublist_of_comments', locals: { comments: @public_comments, comment_type: "Messages from Administrator" } %>
+</div> 
   
 <!-- Begin staff-only comment area-->
-<% if @current_user.role? :is_staff %> 
+<% if @current_user.role? :is_staff %>
+  <div class="staff_only">
+
     <%= render partial: 'user_keys/show_partials/sublist_of_comments', locals: { comments: @private_comments, comment_type: "Staff Discussion (Private)" } %>
   
-  
-  <!-- Staff submitting their own keys can't comment until the key is submitted.-->
-  <% if !(@user_key.at_stage? :awaiting_submission) %>
+    <!-- Staff submitting their own keys can't comment until the key is submitted.-->
+    <% if !(@user_key.at_stage? :awaiting_submission) %>
     
-    <%= render partial: 'user_keys/show_partials/add_comment' %>
+      <%= render partial: 'user_keys/show_partials/add_comment' %>
+      
+    <% else %>
     
-  <% else %>
-  
-  <p><i>Comments cannot be made until the key request has been submitted.</i></p>  
-  
-  <% end %>
-  
+    <p><i>Comments cannot be made until the key request has been submitted.</i></p>  
+    
+    <% end %>
+   
+  </div> 
 <!-- End staff-only comment area-->
 <% end %>
