--- a/app/assets/stylesheets/framework_and_overrides.css.scss
+++ b/app/assets/stylesheets/framework_and_overrides.css.scss
@@ -96,14 +96,25 @@ $success-color: #5da423;
 .alert {
   color: $alert-color;
 }
+.admin_only {
+  background-color: lighten($primary-color, 60)
+}
+.staff_only {
+  background-color: lighten($primary-color, 70);
+}
+.public_comments {
+  background-color: lighten($body-font-color, 60)
+}
 
 // Apply styles to HTML elements
 // to make views framework-neutral.
 // (This part came default with foundation.)
-
+fieldset {
+  border: 1px solid; 
+}
 main {
   @include twelve-columns;
-  background-color: #eee;
+  background-color: white;
   }
 section {
   @extend .row;
