--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,7 +14,7 @@
     <header class="contain-to-grid">
       <%= render 'layouts/navigation' %>
     </header>
-    <main role="main">
+    <main role="main" class="panel">
        <%= render 'layouts/messages' %>
        <%= yield %>
     </main>
