--- a/app/views/user_keys/show.html.erb
+++ b/app/views/user_keys/show.html.erb
@@ -10,9 +10,9 @@
 <!-- Everyone can see the following information.-->
 <p>
   <% if @user_key.at_stage? :confirmed %>
-    <i class="fi-check success"></i>&nbsp;This approval is complete.</i>
+    <i class="fi-check success"></i>&nbsp;The request for this key has been completed.</i>
   <% else %>
-    <i class="fi-x alert"></i>&nbsp;<i>This approval is incomplete.</i>
+    <i class="fi-x alert"></i>&nbsp;<i>This key request is incomplete.</i>
   <% end %>
 </p>
 
@@ -27,15 +27,21 @@
 </p>
 
 <p>
-  <strong>Active:</strong>
-  <%= render partial: 'shared/boolean_label', locals: { boolean_label: @user_key.active } %>
+  <strong>Agreed to terms:</strong>
+  <% if @user_key.agree %>
+  <i class="fi-check success"></i>
+  <% else %>
+    <i class="fi-x alert"></i>
+  <% end %>
 </p>
 <!-- End of public information. -->
 
 <!-- Staffmembers see private information -->
 <% if @current_user.role? :is_staff %>
-  <div class="staff_only">
-    
+  <div class="staff_only panel">
+  <h3>Staff only</h3>
+  <hr/>
+        
     <p>
       <strong>User:</strong>
       <%= link_to @user_key.user.andrew_id, @user_key.user  %>
@@ -54,6 +60,11 @@
     <p>
       <strong>Time confirmed:</strong>
       <%= @user_key.time_confirmed.nil? ? "Not confirmed yet" : @user_key.time_confirmed.to_formatted_s(:pretty) %>
+    </p>
+    
+    <p>
+      <strong>Active:</strong>
+      <%= render partial: 'shared/boolean_label', locals: { boolean_label: @user_key.active } %>
     </p>
     
     <%= render partial: 'user_keys/show_partials/list_of_filters' %>
