--- a/app/views/user_keys/show_partials/_admin_only.html.erb
+++ b/app/views/user_keys/show_partials/_admin_only.html.erb
@@ -4,7 +4,7 @@
     <hr/>
     
     <!-- Buttons for progressing approval process -->
-    <%= render partial: 'user_keys/show_partials/approval_buttons' %> |
+    <%= render partial: 'user_keys/show_partials/approval_buttons' %>
     <%= link_to 'Edit access rights', edit_user_key_path(@user_key), class: "big-button" %> |
     <%= link_to 'Back to keys list', user_keys_path, class: "big-button secondary" %>
     <br/>
