--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -2,8 +2,8 @@
 <p> This API provides access to organization and event information at CMU from the Bridge. 
 
 <% if logged_in? %>
-  <% if @current_user.role == "admin" %>
-   <%= render :partial => "admin_dashboard" %>
+  <% if @current_user.role? :is_staff %>
+   <%= render :partial => "staff_dashboard" %>
 
   <% else %>
    <%= render :partial => "requester_dashboard" %>
