--- a/app/views/layouts/_navigation_links.html.erb
+++ b/app/views/layouts/_navigation_links.html.erb
@@ -5,14 +5,9 @@
     <% if logged_in? and @current_user.role? :is_staff %>
     <li><%= link_to "Users", users_path %></li>
     
-    <li class="has-dropdown"><%= link_to "User Keys", user_keys_path %>
-      <ul class="dropdown">
-        <li><%= link_to "Filters", filters_path %></li>
-        <% if @current_user.role? :admin %>
-          <li><%= link_to "Add a filter", new_filter_path %></li>
-        <% end %>
-      </ul>
-    </li>
+    <li><%= link_to "User Keys", user_keys_path %>
+    
+    <li><%= link_to "Filters", filters_path %></li>
   
     <li class="has-form">
       <div class="collapsed_row">
