--- a/app/views/filters/index.html.erb
+++ b/app/views/filters/index.html.erb
@@ -4,8 +4,7 @@
   <thead>
     <tr>
       <th>Resource</th>
-      <th>Filter name</th>
-      <th>Filter value</th>
+      <th>Filter</th>
       <th colspan="3"></th>
     </tr>
   </thead>
