--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -26,7 +26,8 @@
   <br/>
   
   <div class="actions">
-    <%= f.submit class: "big-button success" %>
+    <%= f.submit class: "big-button success" %> |
+    <%= link_to 'Cancel', @user, class: "big-button secondary" %>
   </div>
   
   </fieldset>
