--- a/app/views/filters/new.html.erb
+++ b/app/views/filters/new.html.erb
@@ -1,5 +1,3 @@
 <h1>New Filter</h1>
 
-<%= render 'form' %>
-
-<%= link_to 'Back', filters_path, class: "big-button secondary" %>
+<%= render partial: 'form', locals: { cancel_url: filters_path } %>
