--- a/app/views/user_keys/_form.html.erb
+++ b/app/views/user_keys/_form.html.erb
@@ -33,8 +33,9 @@
       <hr/>
       
       <p><i>Set filters and organizations that this key may have access to here.</i></p>
-    
-      <%= render partial: 'user_keys/form_partials/filters_checkboxes' %>
+     
+      <%= render partial: 'user_keys/form_partials/objects_checkboxes', locals: { object_class: Filter, object_name: "filter"} %>
+      <%= render partial: 'user_keys/form_partials/objects_checkboxes', locals: { object_class: Column, object_name: "column"} %>
       <%= render partial: 'user_keys/form_partials/organizations_checkboxes' %>    
     
       <!--Expiration date-->
