--- a/app/views/user_keys/form_partials/_objects_checkboxes.html.erb
+++ b/app/views/user_keys/form_partials/_objects_checkboxes.html.erb
@@ -1,16 +1,16 @@
-<!--Pass in object_class and object_name = "filter" or "column"-->
+<!--Pass in object_class and object_name = "filters" or "column", object_non_plural = "filter"-->
 
-<h3><%= object_name.capitalize %>s</h3>
+<h3><%= object_name.capitalize.pluralize %></h3>
 
 <p>
   <% if object_class.all.empty? %>
-  No <%= object_name %> can be selected because there are none in the system.
+  No <%= object_name.pluralize %> can be selected because there are none in the system.
   <% else %>
     <% for resourceName in object_class.all.map{|f| f.resource} %>
-      <h5><%= resourceName.capitalize + " " + object_name.capitalize + "s" %></h5>
+      <h5><%= resourceName.capitalize + " " + object_name.capitalize.pluralize %></h5>
       <% for object in object_class.alphabetical %>
         <% if object.resource == resourceName %>
-          <%= check_box_tag "user_key[#{object_name}_ids][]", object.id, @user_key.send("#{object_name}s".to_sym).include?(object) %>
+          <%= check_box_tag "user_key[#{object_name}_ids][]", object.id, @user_key.send(object_symbol).include?(object) %>
             <%= object.name %>
           <br />
         <% end %>
