Corrected issues with listing filters and columns in show and form of user key

--- a/app/assets/stylesheets/framework_and_overrides.css.scss
+++ b/app/assets/stylesheets/framework_and_overrides.css.scss
@@ -105,7 +105,11 @@ $success-color: #5da423;
 .public_comments {
   background-color: lighten($body-font-color, 60)
 }
-
+.no_bullets {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+}
 // Apply styles to HTML elements
 // to make views framework-neutral.
 // (This part came default with foundation.)
