--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -3,7 +3,11 @@
 
   <%= render 'shared/error_messages', object: @user %>
 
-  <p>@user.andrew_id</p>
+  <p>
+    <strong>Andrew:</strong>
+    <%= @user.andrew_id %>
+  </p>
+  
   <div class="collapsed_row">
     <div class="three-column">
       <%= f.label :role, class: "prefix" %>
